Fix for fade effect on safari issues

--- a/src/assets/scss/_module.modal.scss
+++ b/src/assets/scss/_module.modal.scss
@@ -1,8 +1,6 @@
 .modal {
   --#{$prefix}modal-header-padding: 0 1rem;
-
-  -webkit-backdrop-filter: blur(spacing(3)) brightness(50%);
-          backdrop-filter: blur(spacing(3)) brightness(50%);
+  backdrop-filter: blur(spacing(3)) brightness(50%);
 }
 
 
